--- a/completo/src/main/resources/templates/lista-produtos.html
+++ b/completo/src/main/resources/templates/lista-produtos.html
@@ -5,8 +5,17 @@
 		<meta charset="utf-8">
 	</head>
 	<body>
-		<h1>Novo Produto</h1>
-	
+		<script th:inline="javascript">
+		/*<![CDATA[*/
+			var msg = /*[[${msg}]]*/ null;
+			if(msg != null) {
+				alert(msg);
+			}
+		/*]]>*/
+		</script>
+
+		<h1>Lista Produtos</h1>
+		
 		<table border="1">
 			<tr>
 				<th>ID</th>
